fix: #상담사선택 장원태 [240227] - safari 환경에서 적용되는 일부 css 속성 적용 시도 - perspective, backface-visibility, transform-style, transition 에 대해 webkit 속성 부여

--- a/src/main/reactjs/src/components/chat/counselor/CounselorStyle.css
+++ b/src/main/reactjs/src/components/chat/counselor/CounselorStyle.css
@@ -80,6 +80,7 @@ div.counselbtndiv.counsel-lognav {
     border-radius: 18px;
     /* 카드 뒤집기 시도 */
     perspective: 1000px;
+    -webkit-perspective: 1000px;
 }
 
 .swiper-slide .counselorcard {
@@ -94,6 +95,10 @@ div.counselbtndiv.counsel-lognav {
     backface-visibility: hidden;
     transition: transform 0.5s;
     transform-style: preserve-3d;
+    /* safari에서도 정상 동작하도록 추가 */
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: transform 0.5s;
 }
 
 .swiper-slide .swiper-slide-shadow {
